[package]
name = "lang-rvsdg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
color-eyre = "0.6.5"
inkwell = { version = "0.8.0", features = ["llvm19-1"] }
llvm-ir = { version = "0.11.3", features = ["llvm-19"] }
rustc-hash = "2.1.1"
target-lexicon = "0.13.5"
tempfile = "3.27.0"
